<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.fragment.SearchUserFragment">

    <LinearLayout
        android:id="@+id/fragment_search_user_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_search"/>

        <Spinner
            android:id="@+id/fragment__search_user_spinner"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/default_margin"
            android:entries="@array/job_arrays"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/max_distance"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/fragment_search_user_distance"
            android:layout_height="wrap_content"
            android:text="30 km "/>




    </LinearLayout>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_search_user_seekBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:progress="30"
        android:max="500"
        android:indeterminate="false" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/min_rate"/>

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/fragment_search_user_rating_textview"
            android:layout_height="wrap_content"
            android:text="0/5 "/>




    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:id="@+id/fragment_search_user_ratingbar"
        android:rating="0"
        android:layout_gravity="center_horizontal"
        android:max="5"
        android:progressTint="@color/ratingColor"
        android:layout_height="wrap_content"/>
<Button
    android:layout_width="wrap_content"
    android:layout_gravity="center_horizontal"
    android:id="@+id/fragment_search_user_button"
    android:layout_height="wrap_content"
    android:text="@string/search"/>




</LinearLayout>