<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.AssignmentsActivity"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_assignements_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        app:subtitleTextColor="@android:color/black"
        android:theme="@style/ToolBarStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="test"
            android:id="@+id/activity_assignements_full_name_text_view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/job"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="test"
            android:id="@+id/activity_assignements_job_text_view"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/activity_assignment_ratingbar_linearlayout"
        android:layout_marginLeft="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/avis"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(0) :"
            android:id="@+id/activity_assignements_nb_rating_text_view"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:id="@+id/activity_assignment_ratingbar"
            android:rating="3"
            android:progressTint="@color/ratingColor"/>



    </LinearLayout>
    <TextView
        android:layout_margin="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/describe_your_assignment"/>

    <!-- TEXT MESSAGE EDIT TEXT-->
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/activity_assignments_describe_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:textSize="@dimen/default_text_size"
        android:inputType="textMultiLine"
        android:hint="@string/describe_here"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">



    <Button
        android:id="@+id/assignments_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="@dimen/default_margin"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/assignments_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/send_assignment_button"
        tools:ignore="MissingConstraints" />

</LinearLayout>


</LinearLayout>